--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       #messages li { padding: 5px 10px; }
       #messages li:nth-child(odd) { background: #eee; }
     </style>
-    <script src="https://borimasterchat-test.5apps.com:3000/socket.io/socket.io.js"></script>
+    <script src="https://borimasterchat-test.5apps.com/socket.io/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
       $(function () {
