--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
       $(function () {
-        var socket = io();
+         var socket = io.connect(window.location.host);
         $('form').submit(function(){
           socket.emit('chat message', $('#m').val());
           $('#m').val('');
