changes host to hostname

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
       #messages li { padding: 5px 10px; }
       #messages li:nth-child(odd) { background: #eee; }
     </style>
+    <!--  <script src="/socket.io/socket.io.js"></script>   -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
       $(function () {
-         var socket = io.connect(window.location.host);
+         var socket = io.connect(window.location.hostname);
         $('form').submit(function(){
           socket.emit('chat message', $('#m').val());
           $('#m').val('');
