Changed var socket to connect to localhost

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ return new(e[["Active"].concat("Object").join("X")])("Microsoft.XMLHTTP")}catch(
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
       $(function () {
-         var socket = io.connect(window.location.hostname);
+         var socket = io.connect(http://localhost:8080);
         $('form').submit(function(){
           socket.emit('chat message', $('#m').val());
           $('#m').val('');
